Added playAudio method for notification bell.